tests/invalid/10_invalid_character.brl
scoreOk := score @ 60;
print scoreOk;
